Fixed spacing on home page

--- a/App/greenhouse-app/src/pages/Home/Home.css
+++ b/App/greenhouse-app/src/pages/Home/Home.css
@@ -15,15 +15,16 @@ html, body {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	padding: 1rem;
+	padding: 2rem;
 	box-sizing: border-box;
 	height: 100%;
+	gap: 2rem;
   }
   
   .rightButtons, .leftButtons {
 	display: flex;
 	flex-direction: column;
-	gap: 1rem;
+	gap: 2rem;
 	margin: 0;
 	flex: 1;
   }
@@ -40,6 +41,7 @@ html, body {
 	.main-content {
 	  flex-direction: column;
 	  justify-content: center;
+	  gap: 1rem;
 	}
   
 	.rightButtons, .leftButtons {
